# FlowerEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.MD
CMake/: AddPlatformTarget.cmake  CompileShaders.cmake  EnableLTO.cmake  FetchPackage.cmake  FindOrFetch.cmake  MoltenVK.cmake  StripSymbols.cmake  VulkanCompileShaders.cmake
CMake/Targets/: CMakeLists.txt
CMake/Targets/Editor/: CMakeLists.txt
CMake/Targets/Game/: CMakeLists.txt
Docs/: GettingStarted.md
Docs/Assets/Entity/: Behavior.md  Entity.md
Docs/CodingStyle/: CodingStyle.md  General.md  PerFrameCode.md  PerformanceCriticalCode.md
Docs/Records/: Record.md  RecordID.md  RecordType.md
Docs/Records/Serialization/: RecordMemory.md  RecordMerger.md  SourceFormat.md  SourceFormat_BaseFieldTypes.md
Docs/Render/: RenderElement.md  RenderLoop.md  RenderObject.md  RenderState.md  RenderStateStore.md  RenderView.md
Docs/Shaders/ShaderNode/: CompilerExtensions.md
Docs/World/: Tilemap.md  World.md
Editor/: icons.res
Shaders/OpaqueRenderPass/: OpaqueSpriteQuad.frag  OpaqueSpriteQuad.frag.spv  OpaqueSpriteQuad.vert  OpaqueSpriteQuad.vert.h  OpaqueSpriteQuad.vert.spv
Shaders/UpscaleRenderPass/: FullscreenTriangle.frag  FullscreenTriangle.vert  FullscreenTriangle.vert.spv
Source/Editor/Commandlets/: Commandlet.h
Source/Editor/Commandlets/Commandlets/: CmdEmitCompiledAsset.h
Source/Editor/EditorUI/: EditorUI.h
Source/Editor/ShaderNode/: SNShader.h
Source/Runtime/Application/: Application.cpp  Application.h
Source/Runtime/Assets/: Asset.cpp  Asset.h  AssetFactory.h  AssetLibrary.cpp  AssetLibrary.h  AssetPtr.h  RawAsset.cpp  RawAsset.h
Source/Runtime/Assets/Behavior/: Behavior.h  BehaviorTemplate.h  BehaviorTemplateCompiler.cpp  BehaviorTemplateCompiler.h  BehaviorTemplateRegistry.h
Source/Runtime/Assets/Entity/: Component.h  EntityFactory.h
Source/Runtime/Assets/ProceduralWorld/: ProceduralWorld.h
Source/Runtime/Async/: AsyncService.cpp  AsyncService.h  AsyncTask.h  TaskPool.cpp  TaskPool.h
Source/Runtime/Blackboard/: Blackboard.cpp  Blackboard.h  BlackboardType.h
Source/Runtime/Config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h
Source/Runtime/Core/: GuardedMain.cpp  main.cpp
Source/Runtime/Data/: DataBuffer.h  DataManager.cpp  DataManager.h  DataReader.cpp  DataReader.h  DataView.h  DataWriter.h  DirectoryView.cpp  DirectoryView.h  FileBuffer.h  FileView.h
Source/Runtime/Data/Formats/: LUT.h
Source/Runtime/Data/Serialisation/: ActorRecord.h  Field.h  ObjectField.h  ObjectRecord.h  Record.h  WorldRecord.h
Source/Runtime/Debug/: DebugWindow.h
Source/Runtime/Debug/DebugGameUI/: DebugGameWindow.h
Source/Runtime/Debug/Tracer/: Tracer.h
Source/Runtime/Delegate/: Delegate.h  DelegateInstance.h
Source/Runtime/Engine/: Engine.cpp  Engine.h  EngineDelegates.cpp  EngineDelegates.h  Tickable.cpp  Tickable.h
Source/Runtime/Entry/: EntryRecord.cpp  EntryRecord.h
Source/Runtime/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.h  ReferenceCounter.cpp  ReferenceCounter.h  ReferenceCounterPtr.h
Source/Runtime/Graphics/BufferAttachmentUpdateHandlers/: WorldBufferAttachmentUpdateHandler.cpp  WorldBufferAttachmentUpdateHandler.h
Source/Runtime/Graphics/BufferAttachments/: WorldBufferAttachment.h
Source/Runtime/Graphics/OnDemandRenderService/: OnDemandRenderService.cpp  OnDemandRenderService.h
Source/Runtime/Graphics/OnDemandTasks/: AutogenReliefRenderTask.h
Source/Runtime/Graphics/Render/: Render.h  RenderEngine.cpp  RenderEngine.h  (+6 more)
Source/Runtime/Input/: InputActionRecord.h  InputManager.cpp  InputManager.h  InputView.h
Source/Runtime/Localization/: LocaleManager.cpp  LocaleManager.h  Text.cpp  Text.h
Source/Runtime/Log/: Log.cpp  Log.h
Source/Runtime/Math/: Bounds.h  Matrix.h  Mesh.h  Quadtree.h  Transform.h  Vectors.h
Source/Runtime/Mixin/: AssetLoadCapable.cpp  AssetLoadCapable.h  HasFlags.h  RecordLoadCapable.cpp  RecordLoadCapable.h  Reflected.h  StaticallyTyped.h  ThreadAware.h  Tickable.h  Typed.h
Source/Runtime/Object/: Object.h  ObjectLibrary.cpp  ObjectLibrary.h
Source/Runtime/Platform/: File.cpp  File.h  FileBase.h  MappedFile.h  Platform.cpp  Platform.h  PlatformDefines.h  PlatformImpl.h
Source/Runtime/Plugins/: PluginFile.cpp  PluginFile.h  PluginManager.cpp  PluginManager.h  PluginOrderError.h  PluginReader.cpp  PluginReader.h  PluginWriter.h  RecordInfo.h
Source/Runtime/Record/: Field.h  FieldBase.h  FieldContainers.h  IRecordSource.h  Record.cpp  Record.h  RecordFactory.h  RecordFactoryLibrary.h  RecordFieldMemory.h  RecordID.h  RecordLibrary.cpp  RecordLibrary.h  RecordMemory.cpp  RecordMemory.h  RecordMerger.cpp  RecordMerger.h  RecordPtr.cpp  RecordPtr.h  RecordRefCount.cpp  RecordRefCount.h
Source/Runtime/Save/: SaveManager.cpp  SaveManager.h
Source/Runtime/Script/: ScriptEngine.h  ScriptVM.h  VMAllocator.h
Source/Runtime/Service/: Service.cpp  Service.h
Source/Runtime/SourceFormat/: SourceReader.cpp  SourceReader.h  SourceWriter.h
Source/Runtime/UI/: UINode.h
Source/Runtime/Utility/: Arena.cpp  Arena.h  EnumClassArray.h  Flag.h  Hash.h  ID.h  Memory.h  PathBuilder.cpp  PathBuilder.h  Record.h  SIMD.h  StrongType.h  Tags.h  Types.h
Source/Runtime/Window/: Window.cpp  Window.h  WindowEvents.h
Source/Runtime/World/: Actor.cpp  Actor.h  Chunk.h  ReferenceRecord.h  SceneView.h  World.cpp  World.h  WorldRecord.h
Source/Runtime/WritableSourceManager/: WritableSourceManager.cpp  WritableSourceManager.h
Test/: CMakeLists.txt
Test/Records/: Test_DataWriter.cpp  Test_OffsetsParsing.cpp
Tools/: CMakeLists.txt
Tools/ImHex/: FlowerPluginFile.hexpat
Tools/ShaderCompiler/: CMakeLists.txt
Tools/ShaderCompiler/Source/: ArgParser.h  Context.h  Formats.h  SPIRVCompiler.cpp  SPIRVCompiler.h  Stages.h  Targets.h  WriteOut.cpp  WriteOut.h  main.cpp
Tools/ShaderCompiler/Source/Cross/DX/: HLSLCompiler.cpp  HLSLCompiler.h  SPIRVToHLSL.cpp  SPIRVToHLSL.h
Tools/ShaderCompiler/Source/Cross/Metal/: MSLCompiler.h  MSLCompiler.mm  SPIRVToMSL.cpp  SPIRVToMSL.h
Tools/bin2h/: CMakeLists.txt  bin2h.c  bin2h.py
(+175 files in other folders)
